# AskFlow

./: .dockerignore  .env.example  .gitignore  1.md  AGENTS.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  README_zh.md  TRELLIS.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 20260327_01_initial_schema.py  20260514_01_feedback_and_message_metadata.py  20260519_01_ticket_open_unique.py  20260709_01_knowledge_gaps.py  20260709_02_knowledge_drafts.py  20260710_01_handoff_session.py  20260710_02_prompt_templates.py  20260710_03_audit_logs.py  20260711_01_document_index_status.py
docs/: AGENT_HARNESS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE_zh.md  Windows.md
docs/audits/: CLOSURE_SOP_REVIEW_2026-05-16.md  DUAL_ROLE_REVIEW_2026-05-14.md  IMPLICIT_CONSTRAINTS_AUDIT_2026-05-19.md  PRD_AUDIT.md
docs/deployment/: CHECKLIST.md  README.md
docs/examples/: order_webhook_demo.py  orders.csv
docs/status/: PROJECT_STATUS.md  STATUS.md  STATUS_CHECK_2026-05-14.md  TODO_TASKS_5_6.md  UNIMPLEMENTED_2026-05-14.md
eval/: __init__.py
eval/corpus/: account.md  invoicing.md  returns.md  shipping.md  warranty.md
eval/golden/: core_faq.jsonl  refusals.jsonl
eval/harness/: __init__.py  _bootstrap.py  (+7 more)
plan-docs/: README.md
scripts/: create_user.py  run.sh  seed_data.py
static/: admin.html  chat.js  index.html  style.css  user.html
tests/: conftest.py
web/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
(+252 files in other folders)
