[project]
name = "askflow"
version = "0.1.0"
description = "Intelligent customer service system with RAG + Agent"
requires-python = ">=3.11"
dependencies = [
# Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
# Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis[hiredis]>=5.0.0",
# MinIO
    "minio>=7.2.0",
# ChromaDB
    "chromadb>=0.5.0",
# LLM / Embeddings
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
# LangGraph
    "langgraph>=0.2.0",
# Document parsing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.6",
# Search
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
# Auth
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
# Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
# Config
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/askflow --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
